Menu bar with System theme is wrong color in Firefox 122 on Ubuntu 20.04 LTS
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox122 | --- | verified |
| firefox123 | --- | verified |
| firefox124 | --- | verified |
People
(Reporter: nathanael.naeri, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(2 files)
|
574.99 KB,
image/png
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
pascalc|PTO
:
approval-mozilla-beta+
dmeehan
:
approval-mozilla-release+
|
Details | Review |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:122.0) Gecko/20100101 Firefox/122.0
Steps to reproduce:
I use Firefox with the menu bar enabled and the default System theme.
Actual results:
On Ubuntu 20.04 LTS, the menu bars of the windows are dark (as in a dark theme) even though the windows themselves are white (as in a light theme).
Firefox 121 respected those colors i.e. it displayed a dark menu bar and the rest of the window was white. Following update to version 122, Firefox displays a white menu bar (which incidentally makes it impossible to see the maximize/minimize buttons, but they're here).
Of course enabling the Dark theme in Firefox reverts to a dark menu bar, but then the whole window obeys the dark theme, not just the menu bar.
Note that this only concerns Firefox's main window: the "About Firefox" window and the bookmark manager window, for instance, have dark menu bars as expected.
Please see attached screenshot.
Expected results:
I expect Firefox 122 with System theme on Ubuntu 20.04 LTS to keep applying that OS's system theme: dark menu bars, white window backgrounds.
Comment 1•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
Comment 2•2 years ago
|
||
Can you please use mozregression tool to find broken commit?
https://fedoraproject.org/wiki/How_to_debug_Firefox_problems#Use_Mozregression_tool
Thanks!
Comment 3•2 years ago
|
||
I noticed the same problem. Maximize/Minimize buttons are nearly invisible using the default settings after the top bar automatically switched from dark to light with the update.
Tested with mozregression:
5:50.87 INFO: No more integration revisions, bisection finished.
5:50.87 INFO: Last good revision: 34533b3add99fe26cbd60a7fd8d0c60966e5fd32
5:50.87 INFO: First bad revision: 89da90df398f5aee595e14748b0241ede2a9fd4d
5:50.87 INFO: Pushlog:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=34533b3add99fe26cbd60a7fd8d0c60966e5fd32&tochange=89da90df398f5aee595e14748b0241ede2a9fd4d
Comment 4•2 years ago
|
||
Emilio, any idea here?
Thanks.
Updated•2 years ago
|
| Assignee | ||
Comment 5•2 years ago
|
||
What does about:support say your GTK theme is?
Comment 6•2 years ago
|
||
(In reply to Emilio Cobos Álvarez (:emilio) from comment #5)
What does
about:supportsay your GTK theme is?
OS Theme Yaru / Yaru
System theme — auto theme 1.3 true default-theme@mozilla.org
I think this is the default in Ubuntu 20.04 LTS.
Comment 7•2 years ago
|
||
The Yaru theme used by default in Ubuntu changed the default titlebar color inbetween Ubuntu 20.04 LTS and Ubuntu 22.04 LTS releases from dark to light. I suppose Firefox since this patch always uses a light color when Yaru is detected, which leads to this bad user experience for users still on 20.04 where the buttons now appear as nearly invisible because they are also displayed in a light foreground-color, assuming the background is the default dark as defined by the old theme.
| Assignee | ||
Comment 8•2 years ago
|
||
Older versions of the yaru theme had dark titlebars even in light mode
(like yaru-remix).
Instead of getting into the version-detection business, just don't
override with the Adwaita colors.
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 9•2 years ago
|
||
Comment on attachment 9377745 [details]
Bug 1877663 - Don't special-case adwaita colors for the yaru theme. r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: Wrong titlebar buttons in older ubuntu versions.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: See bug 1877002.
- List of other uplifts needed: Bug 1877002
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Basically removes an special case, to return to the same colors we had before.
- String changes made/needed: none
- Is Android affected?: No
| Assignee | ||
Updated•2 years ago
|
Comment 10•2 years ago
|
||
Set release status flags based on info from the regressing bug 1869299
Comment 11•2 years ago
|
||
Comment 12•2 years ago
|
||
| bugherder | ||
Updated•2 years ago
|
Comment on attachment 9377745 [details]
Bug 1877663 - Don't special-case adwaita colors for the yaru theme. r=stransky
Approved for 123 beta 7, thanks.
Comment 14•2 years ago
|
||
| uplift | ||
Comment 15•2 years ago
|
||
| bugherder uplift | ||
Comment 16•2 years ago
|
||
I have reproduced the issue on Firefox 122.0 and verified the fix on Nightly 124.0a1 (20240204213653) and Beta 123.0b7 (20240205085625).
Comment 17•2 years ago
|
||
Comment on attachment 9377745 [details]
Bug 1877663 - Don't special-case adwaita colors for the yaru theme. r=stransky
Approved for 122.0.1
Comment 18•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Comment 19•2 years ago
|
||
Verified fixed on Firefox 122.0.1 (20240205133611)
| Reporter | ||
Updated•1 year ago
|
Description
•