Bug 1877663 - Don't special-case adwaita colors for the yaru theme. r=stransky a=pascalc

Older versions of the yaru theme had dark titlebars even in light mode
(like yaru-remix).

Instead of getting into the version-detection business, just don't
override with the Adwaita colors.

Differential Revision: https://phabricator.services.mozilla.com/D200362